Seems to be working good (revision dec2ff8... of second-transfer)

--- a/lock-step-stransfer.cabal
+++ b/lock-step-stransfer.cabal
@@ -69,3 +69,4 @@ executable lock-step-stransfer
   -- Base language which the package is written in.
   default-language:    Haskell2010
   
+  ghc-options: -threaded
